# SchroSIM

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Package.swift  README.md  SECURITY.md  hatch_build.py  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs-pages.yml  pypi-publish.yml
Sources/schrosim-gui/: Cargo.toml
benchmarks/: compute-scaling-baseline.json  schrosim-core-baseline.json  schrosim-core-scaling-baseline.json
config/: foundry_registry.json  kpi_policies.json  sample_calibrated_noise_profile.json  trace_rbac_policy.json
core-rust/: README.md
core-rust/schrosim-core/: Cargo.toml
core-swift/: README.md
demos/circuit-ssamples/: complex_foundry_circuit_compliant_runtime_input.json  complex_foundry_circuit_compliant_snapshot.json  generate_complex_foundry_circuit_png.sh
docs/: 01-overview.md  02-quickstart.md  03-architecture.md  04-circuit-ir-and-schema.md  05-compiler-and-foundry.md  06-execution-backends.md  07-cli-reference.md  08-tracing-observability-reproducibility.md  09-validation-and-benchmarks.md  10-theory-and-exactness-scope.md  11-mathematical-proofs.md  12-worked-examples.md  13-developer-guide.md  DEBUGGING.md  README.md  index.md
enterprise/: README.md
examples/: basic_loss.json  fock_injection_smoke.json  foundry_loss_map.json  foundry_registry_ref.json  runtime_default_foundry.json  seeded_homodyne.json
examples/cv/: foundry_validation_single_mode_fock_response.json  foundry_validation_single_mode_squeezing.json  foundry_validation_thermal_heterodyne.json  foundry_validation_two_mode_epr_loss.json  loss_channel.swift  (+1 more)
scripts/: compute-benchmark-scaling.sh  compute-benchmark.sh  cv-validation-suite.sh  swift-test.sh  trace-slo-check.sh
src/schrosim/: cli.py  (+2 more)
(+52 files in other folders)
